# skyfast

./: README.md  READme.md  bilby+skyfast.py  bilby+skyfast_ray.py  pyproject.toml  ray_test.py  requirements.txt  setup.py  skyfast.py
Tutorial/: skyfast_tutorial.ipynb  skyfast_tutorial_GW150914.ipynb  tutorial_SKYFAST.ipynb
skyfast/: coordinates.py  skyfast.py
skyfast/pipelines/: create_glade.py
